# data-analysis-projects

Demographic-Data-Analyzer/: demographic_data_analyzer.py  pyproject.toml
Mean-Variance-Standard-Deviation-Calculator/: main.py  mean_var_std.py  pyproject.toml
Medical-Data-Visualizer/: medical_data_visualizer.py  pyproject.toml
Page-View-Time-Series-Visualizer/: pyproject.toml  time_series_visualizer.py
Sea-Level-Predictor/: pyproject.toml  sea_level_predictor.py
