[tool.poetry]
name = "repl-nix-page-view-time-series-visualizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_page_view_time_series_visualizer"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
pandas = "^2.1.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
